# LearningNotes-C

./: .gitignore  CMakeLists.txt  Log.cpp  Log.h  MakeFile  Math.cpp  README.md  copy.h  hello  hello.c  main  main.c  main.cpp  web  web.cpp
demo/: CMakeLists.txt  hello  main
inc/strop/: fun_pointer.h  printint.h  readlines.h  string.h  unidirectionLinkedlist.h
include/: string.c  string.h
source/: main.c
src/: allicbuf.c  fun_pointer.c  printInt.c  readlines.c  string.c  unidirectionLinkedlist.c
